--- a/Astro.Features/Astro.Features.csproj
+++ b/Astro.Features/Astro.Features.csproj
@@ -1,16 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>a9dfabad-3202-4189-96c9-00824da1e034</ProjectGuid>
+    <ProjectGuid>{A9DFABAD-3202-4189-96C9-00824DA1E034}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Astro.Features</RootNamespace>
     <AssemblyName>Astro.Features</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,24 +31,43 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    
-    <Reference Include="System.Core"/>
-    <Reference Include="System.Xml.Linq"/>
-    <Reference Include="System.Data.DataSetExtensions"/>
-    
-    
-    <Reference Include="Microsoft.CSharp"/>
-    
-    <Reference Include="System.Data"/>
-    
-    <Reference Include="System.Net.Http"/>
-    
-    <Reference Include="System.Xml"/>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Economics\Bankings\IBank.cs" />
+    <Compile Include="Economics\Bankings\IBankAccount.cs" />
+    <Compile Include="Economics\IBuyer.cs" />
+    <Compile Include="Economics\Shops\ICustomer.cs" />
+    <Compile Include="Economics\Shops\IProductDescriptor.cs" />
+    <Compile Include="Economics\ISeller.cs" />
+    <Compile Include="Economics\Shops\IShop.cs" />
+    <Compile Include="Quests\IRewardProvider.cs" />
+    <Compile Include="Services\ITransaction.cs" />
+    <Compile Include="Economics\Shops\OrderSheet.cs" />
+    <Compile Include="Effects\AffectedEventArgs.cs" />
+    <Compile Include="Effects\IAffectable.cs" />
+    <Compile Include="Effects\IEffector.cs" />
+    <Compile Include="Inventories\IItemDescriptor.cs" />
+    <Compile Include="Inventories\IInventory.cs" />
+    <Compile Include="Inventories\InventoryEventArgs.cs" />
+    <Compile Include="Services\GlobalBus.cs" />
+    <Compile Include="Services\IMessageBus.cs" />
+    <Compile Include="Services\ITransactor.cs" />
+    <Compile Include="Services\MessageHandler.cs" />
+    <Compile Include="Poolings\IPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quests\IQuestProposer.cs" />
+    <Compile Include="Quests\IQuestPerformer.cs" />
+    <Compile Include="Quests\IQuest.cs" />
+    <Compile Include="Quests\IQuestProposal.cs" />
+    <Compile Include="Quests\IRequirement.cs" />
+    <Compile Include="Quests\IRewardDescriptor.cs" />
+    <Compile Include="Worlds\Characters\ICharacter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Worlds\Triggers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -57,5 +77,4 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-
- </Project>
+</Project>
