--- a/Astro.Networking/Astro.Networking.csproj
+++ b/Astro.Networking/Astro.Networking.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9DFABAD-3202-4189-96C9-00824DA1E034}</ProjectGuid>
+    <ProjectGuid>{3EE7DF6F-4E1B-49D9-B4D7-3D713866B03C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Astro.Features</RootNamespace>
-    <AssemblyName>Astro.Features</AssemblyName>
+    <RootNamespace>Astro.Networking</RootNamespace>
+    <AssemblyName>Astro.Networking</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -36,40 +36,20 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Economics\Bankings\IBank.cs" />
-    <Compile Include="Economics\Bankings\IBankAccount.cs" />
-    <Compile Include="Economics\IBuyer.cs" />
-    <Compile Include="Economics\Shops\ICustomer.cs" />
-    <Compile Include="Economics\Shops\IProductDescriptor.cs" />
-    <Compile Include="Economics\ISeller.cs" />
-    <Compile Include="Economics\Shops\IShop.cs" />
-    <Compile Include="Quests\IRewardProvider.cs" />
-    <Compile Include="Serialization\ISerializer.cs" />
-    <Compile Include="Services\ITransaction.cs" />
-    <Compile Include="Economics\Shops\OrderSheet.cs" />
-    <Compile Include="Effects\AffectedEventArgs.cs" />
-    <Compile Include="Effects\IAffectable.cs" />
-    <Compile Include="Effects\IEffector.cs" />
-    <Compile Include="Inventories\IItemDescriptor.cs" />
-    <Compile Include="Inventories\IInventory.cs" />
-    <Compile Include="Inventories\InventoryEventArgs.cs" />
-    <Compile Include="Services\GlobalBus.cs" />
-    <Compile Include="Services\IMessageBus.cs" />
-    <Compile Include="Services\ITransactor.cs" />
-    <Compile Include="Services\MessageHandler.cs" />
-    <Compile Include="Poolings\IPool.cs" />
+    <Compile Include="IAcceptor.cs" />
+    <Compile Include="IConnection.cs" />
+    <Compile Include="Messaging\INetworkMessageHandler.cs" />
+    <Compile Include="Messaging\NetworkMessenger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Quests\IQuestProposer.cs" />
-    <Compile Include="Quests\IQuestPerformer.cs" />
-    <Compile Include="Quests\IQuest.cs" />
-    <Compile Include="Quests\IQuestProposal.cs" />
-    <Compile Include="Quests\IRequirement.cs" />
-    <Compile Include="Quests\IRewardDescriptor.cs" />
-    <Compile Include="Worlds\Characters\ICharacter.cs" />
+    <Compile Include="Messaging\NetworkMessage.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Worlds\Triggers\" />
+    <ProjectReference Include="..\Astro.Features\Astro.Features.csproj">
+      <Project>{a9dfabad-3202-4189-96c9-00824da1e034}</Project>
+      <Name>Astro.Features</Name>
+    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
