--- a/Astro.UI/Astro.UI.csproj
+++ b/Astro.UI/Astro.UI.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A9DFABAD-3202-4189-96C9-00824DA1E034}</ProjectGuid>
+    <ProjectGuid>{537E95A3-777A-4692-824C-D90771305F8B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Astro.Features</RootNamespace>
-    <AssemblyName>Astro.Features</AssemblyName>
+    <RootNamespace>Astro.UI</RootNamespace>
+    <AssemblyName>Astro.UI</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -36,48 +36,16 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Crafting\ICraftingMethod.cs" />
-    <Compile Include="Crafting\ICrafter.cs" />
-    <Compile Include="Crafting\ICraftingResult.cs" />
-    <Compile Include="Economic\Banking\IBank.cs" />
-    <Compile Include="Economic\Banking\IBankAccount.cs" />
-    <Compile Include="Economic\IBuyer.cs" />
-    <Compile Include="Economic\Shops\ICustomer.cs" />
-    <Compile Include="Economic\Shops\IProductDescriptor.cs" />
-    <Compile Include="Economic\ISeller.cs" />
-    <Compile Include="Economic\Shops\IShop.cs" />
-    <Compile Include="Guilds\IGuild.cs" />
-    <Compile Include="Party\IParty.cs" />
-    <Compile Include="Economic\Shops\OrderSheet.cs" />
-    <Compile Include="Effects\AffectedEventArgs.cs" />
-    <Compile Include="Effects\IAffectable.cs" />
-    <Compile Include="Effects\IEffector.cs" />
-    <Compile Include="Inventory\IItemDescriptor.cs" />
-    <Compile Include="Inventory\IInventory.cs" />
-    <Compile Include="Inventory\InventoryEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Quests\IQuestDescriptor.cs" />
-    <Compile Include="Quests\IQuestObjective.cs" />
-    <Compile Include="Quests\IQuestProvider.cs" />
-    <Compile Include="Quests\IQuestPerformer.cs" />
-    <Compile Include="Quests\IQuest.cs" />
-    <Compile Include="Statistic\IAnalyzer.cs" />
-    <Compile Include="Statistic\IStatistic.cs" />
-    <Compile Include="Worlds\Arena\IArena.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Accounts\" />
-    <Folder Include="Worlds\Characters\Skills\" />
-    <Folder Include="Worlds\Characters\Spells\" />
-    <Folder Include="Worlds\Maps\" />
-    <Folder Include="Worlds\Pets\" />
-    <Folder Include="Worlds\Triggers\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Astro.Core\Astro.csproj">
       <Project>{0dd85d1a-9b79-4e97-acf3-64dc75e561f3}</Project>
       <Name>Astro</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Dialogues\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
