--- a/Astro.Core/Astro.csproj
+++ b/Astro.Core/Astro.csproj
@@ -40,7 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\ISerializer.cs" />
     <Compile Include="Services\GlobalBus.cs" />
-    <Compile Include="Services\IMessageBus.cs" />
+    <Compile Include="Services\IMessageQueue.cs" />
     <Compile Include="Services\ITransaction.cs" />
     <Compile Include="Services\ITransactor.cs" />
     <Compile Include="Services\MessageHandler.cs" />
