--- a/Astro.Features/Astro.Features.csproj
+++ b/Astro.Features/Astro.Features.csproj
@@ -36,9 +36,8 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Crafting\ICraftingMethod.cs" />
     <Compile Include="Crafting\ICrafter.cs" />
-    <Compile Include="Crafting\ICraftingResult.cs" />
+    <Compile Include="Crafting\IRecipe.cs" />
     <Compile Include="Economic\Banking\IBank.cs" />
     <Compile Include="Economic\Banking\IBankAccount.cs" />
     <Compile Include="Economic\IBuyer.cs" />
@@ -57,7 +56,6 @@
     <Compile Include="Inventory\InventoryEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quests\IQuestDescriptor.cs" />
-    <Compile Include="Quests\IQuestObjective.cs" />
     <Compile Include="Quests\IQuestProvider.cs" />
     <Compile Include="Quests\IQuestPerformer.cs" />
     <Compile Include="Quests\IQuest.cs" />
